--- a/src/styles/Mainpage.module.css
+++ b/src/styles/Mainpage.module.css
@@ -56,7 +56,9 @@
       font-weight: 600;
       line-height: normal;
       flex-wrap: nowrap;
-      margin-bottom: 20px;
+      width: 100%;
+      justify-content: center;
+      margin: 0 auto 28px auto;
   }
   
   .titleText {
@@ -90,15 +92,13 @@
   }
   
   .showMore {
-      flex-grow: 1;
-      font-family: 'RiaSans-ExtraBold';
+      flex-shrink: 0;
       color: #858282;
+      font-family: Pretendard;
       font-size: 15px;
       font-style: normal;
       font-weight: 400;
       line-height: normal;
-      cursor: pointer;
-      flex-basis: 10%;
   }
   
   .stroke {
@@ -119,11 +119,11 @@
   .lineLost {
       flex-grow: 1;
       width: 45.47vw;
-      height: 4px; /* 선의 두께 */
+      height: 2px; /* 선의 두께 */
       background-color: #8ac4d0; /* 선 색상 */
       border-radius: 2px; /* 둥근 끝 */
       position: relative;
-      margin-left: 90px;
+      margin-left: 45px;
       margin-right: 30px;
       min-width: 150px; /* 최소 너비 설정 */
   }
@@ -143,11 +143,11 @@
   .lineFound {
       flex-grow: 1;
       width: 45.47vw; /* 선의 길이 */
-      height: 4px; /* 선의 두께 */
+      height: 2px; /* 선의 두께 */
       background-color: #8ac4d0; /* 선 색상 */
       border-radius: 2px; /* 둥근 끝 */
       position: relative;
-      margin-left: 70px;
+      margin-left: 0px;
       margin-right: 30px;
       min-width: 150px; /* 최소 너비 설정 */
   }
@@ -166,9 +166,9 @@
   /*전체 카드=>가로로 정렬 위해서*/
   .cardList {
       display: flex;
-      justify-content: center ;
+      justify-content: flex-start ;
       flex-wrap: wrap;
-      gap: 26px; /* 카드 사이 간격 */
+      gap: 24px;
       text-decoration: none;
       margin: 0 auto 127px auto;
   }
@@ -186,6 +186,7 @@
       width: 100%;
       height: 97.363px;/* 높이를 고정 */
       object-fit: cover;
+      border-radius: 15px 15px 0 0;
     }
     
     .cardContent {
