--- a/src/styles/Mypage.module.css
+++ b/src/styles/Mypage.module.css
@@ -59,7 +59,7 @@
   .contents{
       background-color: white;
       border-radius: 30px 30px 0 0;
-      padding: 0 50px 200px 50px;
+      padding: 0 41px 150px 41px;
       width: 100%;
   }
 
@@ -86,7 +86,6 @@
   .contentsContainer{
     width: 1040px;
     margin: 173px auto 0 auto;
-    padding: 0 44px; 
     background-color: white;
     z-index: 5;
     border-radius: 30px 30px 0 0;
@@ -163,7 +162,7 @@
       font-weight: 600;
       line-height: normal;
       flex-wrap: nowrap;
-      margin: 45px 0;
+      margin-top: 45px;
   }
   
   .titleText {
@@ -178,6 +177,7 @@
     font-style: normal;
     font-weight: 700;
     line-height: normal;
+    flex-shrink: 0;
   }
   
   .comma {
@@ -200,15 +200,14 @@
   }
   
   .showMore {
-      flex-grow: 1;
-      font-family: 'yg-jalnan';
-      color: #858282;
-      font-size: 15px;
-      font-style: normal;
-      font-weight: 400;
-      line-height: normal;
-      cursor: pointer;
-  }
+    flex-shrink: 0;
+    color: #858282;
+    font-family: Pretendard;
+    font-size: 15px;
+    font-style: normal;
+    font-weight: 400;
+    line-height: normal;
+}
   
   .stroke {
       flex-grow: 1;
@@ -226,54 +225,52 @@
   }
   /* 글씨 옆 선 */
   .lineLost {
-      flex-grow: 1;
-      width: 700px; /* 선의 길이 */
-      height: 4px; /* 선의 두께 */
-      background-color: #8ac4d0; /* 선 색상 */
-      border-radius: 2px; /* 둥근 끝 */
-      position: relative;
-      margin-left: 20px;
-      margin-right: 10px;
-      min-width: 150px; /* 최소 너비 설정 */
-      max-width: 30vw;
-  }
-  
-  .lineLost::after {
-      content: "";
-      width: 8px;
-      height: 8px;
-      background-color: #8ac4d0;
-      border-radius: 50%; 
-      position: absolute;
-      right: 0; 
-      top: 50%;
-      transform: translateY(-50%);
-  }
-  
-  .lineFound {
-      flex-grow: 1;
-      width: 700px; /* 선의 길이 */
-      height: 4px; /* 선의 두께 */
-      background-color: #8ac4d0; /* 선 색상 */
-      border-radius: 2px; /* 둥근 끝 */
-      position: relative;
-      margin-left: 35px;
-      margin-right: 11px;
-      min-width: 150px; /* 최소 너비 설정 */
-      max-width: 30vw;
-  }
-  
-  .lineFound::after {
-      content: "";
-      width: 8px;
-      height: 8px;
-      background-color: #8ac4d0;
-      border-radius: 50%; 
-      position: absolute;
-      right: 0; 
-      top: 50%;
-      transform: translateY(-50%);
-  }
+    flex-grow: 1;
+    width: 520px;
+    height: 2px; /* 선의 두께 */
+    background-color: #8ac4d0; /* 선 색상 */
+    border-radius: 2px; /* 둥근 끝 */
+    position: relative;
+    margin-left: 90px;
+    margin-right: 30px;
+    min-width: 150px; /* 최소 너비 설정 */
+}
+
+.lineLost::after {
+    content: "";
+    width: 8px;
+    height: 8px;
+    background-color: #8ac4d0;
+    border-radius: 50%; 
+    position: absolute;
+    right: 0; 
+    top: 50%;
+    transform: translateY(-50%);
+}
+
+.lineFound {
+    flex-grow: 1;
+    width: 520px; /* 선의 길이 */
+    height: 2px; /* 선의 두께 */
+    background-color: #8ac4d0; /* 선 색상 */
+    border-radius: 2px; /* 둥근 끝 */
+    position: relative;
+    margin-left: 60px;
+    margin-right: 30px;
+    min-width: 150px; /* 최소 너비 설정 */
+}
+
+.lineFound::after {
+    content: "";
+    width: 8px;
+    height: 8px;
+    background-color: #8ac4d0;
+    border-radius: 50%; 
+    position: absolute;
+    right: 0; 
+    top: 50%;
+    transform: translateY(-50%);
+}
   /*전체 카드=>가로로 정렬 위해서*/
   .cardList {
       display: flex;
@@ -288,22 +285,30 @@
       border-radius: 12px;
       box-shadow: 0 4px 10px rgba(0, 0, 0, 0.1);
       overflow: hidden;
-      width: 200px;  /* 카드의 너비를 적절하게 조절 */
+      width: 240.349px;  /* 카드의 너비를 적절하게 조절 */
   }
     
-    .cardImage {
-      width: 100%;
-      height: 150px; /* 높이를 고정 */
-      object-fit: cover;
-    }
+  .cardImage {
+    width: 100%;
+    height: 97.363px;/* 높이를 고정 */
+    object-fit: cover;
+    border-radius: 15px 15px 0 0;
+  }
     
-    .cardContent {
-      display: flex;
-      flex-direction: column;
-      align-items: flex-start;
-      padding: 12px;
-      width: 100%;
-    }
+  .cardContent {
+    display: flex;
+    flex-direction: column;
+    align-items: flex-start;
+    padding: 5px;
+    width: 100%;
+    color: #143950;
+    font-family: Pretendard;
+    font-size: 16px;
+    font-style: normal;
+    font-weight: 500;
+    line-height: normal;
+    
+  }
     
     .cardTitle {
       font-size: 16px;
@@ -313,15 +318,22 @@
     .cardCategory {
       font-size: 12px;
       color: gray;
-      border: 1px solid lightgray;
+      border-radius: 19px;
+      border: 1px solid #7ACAD6;
       padding: 2px 6px;
-      border-radius: 10px;
+      display: inline-block;
+      flex-shrink: 0; 
     }
     
     .cardDate {
+      position:absolute;
+      top:85%;
+      left:75%;
       font-size: 12px;
       color: darkgray;
-      align-self: flex-start;
+      align-self: end;
+      display: inline-block;
+      flex-shrink: 0;
     }
 
     .myfoundtitle {
@@ -349,6 +361,28 @@
       margin: 0 auto;
   }
 
+  .dropdown {
+    border-radius: 19px;
+    border: 1px solid #9FD8E0;
+    display: flex;
+    width: 82px;
+    height: 27px;
+    padding: 3.5px 8px 5px 13px;
+    flex-direction: column;
+    align-items: flex-start;
+    text-align: center;
+    gap: 10px;
+    flex-shrink: 0;
+    color: #000;
+    font-family: Pretendard;
+    font-size: 13px;
+    font-style: normal;
+    font-weight: 400;
+    line-height: normal;
+    cursor: pointer;  
+    justify-content: flex-end;
+  }
+
   .dropdown:focus {
     border: 1px solid #9FD8E0;
     background-color: transparent;
@@ -358,7 +392,8 @@
   }
 
   .dropdownWrapper {
-    display: flex;  
+    display: flex;
     justify-content: flex-end;
   }
+  
     
