--- a/src/styles/Mainpage.module.css
+++ b/src/styles/Mainpage.module.css
@@ -100,6 +100,7 @@
       font-style: normal;
       font-weight: 400;
       line-height: normal;
+      cursor: pointer;
   }
   
   .stroke {
@@ -169,7 +170,7 @@
       display: flex;
       justify-content: center ;
       flex-wrap: wrap;
-      gap: 24px;
+      gap: 22px;
       flex-wrap: nowrap;
       text-decoration: none;
       margin: 0 auto 127px auto;
