--- a/src/styles/Mypage.module.css
+++ b/src/styles/Mypage.module.css
@@ -208,6 +208,7 @@
     font-style: normal;
     font-weight: 400;
     line-height: normal;
+    cursor: pointer;
 }
   
   .stroke {
@@ -277,7 +278,8 @@
       display: flex;
       justify-content: flex-start ;
       flex-wrap: wrap;
-      gap: 16px; /* 카드 사이 간격 */
+      gap: 20px; /* 카드 사이 간격 */
+      text-decoration: none;
   }
   
   /*개별 요소(부모 요소X)*/
@@ -287,7 +289,8 @@
       box-shadow: 0 4px 10px rgba(0, 0, 0, 0.1);
       overflow: hidden;
       width: 220px;  /* 카드의 너비를 적절하게 조절 */
-  }
+      text-decoration: none;
+    }
     
   .cardImage {
     width: 100%;
@@ -383,6 +386,7 @@
     line-height: normal;
     cursor: pointer;  
     justify-content: flex-end;
+    margin-bottom: 25px;
   }
 
   .dropdown:focus {
