--- a/src/styles/Layout.module.css
+++ b/src/styles/Layout.module.css
@@ -1,127 +1,127 @@
 @font-face {
-    font-family: "Pretendard";
-    src: url("../assets/fonts/PretendardVariable.woff2") format("woff2");
-    font-weight: normal;
-    font-style: normal;
-  }
-  
-  * {
-    font-family: "Pretendard", sans-serif;
-  }
+  font-family: "Pretendard";
+  src: url("../assets/fonts/PretendardVariable.woff2") format("woff2");
+  font-weight: normal;
+  font-style: normal;
+}
 
-  *::-webkit-scrollbar {
-    display: none;
-  }
-  
-  .container {
-    display: flex;
-    flex-direction: column;
-    height: 100vh;
-  }
-  
-  .header {
-    display: flex;
-    justify-content: space-between;
-    align-items: center;
-    padding: 10px 35px;
-    background-color: #F6F7F7;
-  }
-  
-  .leftSection {
-    display: flex;
-    align-items: center;
-    gap: 32px; 
-  }
-  
-  .logo svg {
-    height: 40px;
-  }
-  
-  .nav {
-    display: flex;
-    gap: 32px; 
-  }
-  
-  .nav a {
-    text-decoration: none;
-    color: black;
-    font-weight: 600;
-    font-size: 15px;
-    padding: 5px 10px;
-    transition: transform 0.2s ease-in-out; 
-  }
-  
-  .nav a:hover {
-    transform: scale(1.05); 
-    color: #7ACAD6;
-  }
+* {
+  font-family: "Pretendard", sans-serif;
+}
 
-  .nav a.active {
-    color: #7ACAD6;
-  }
-  
-  .rightSection {
-    display: flex;
-    gap: 20px; 
-  }
+*::-webkit-scrollbar {
+  display: none;
+}
 
-  .rightSection a {
-    text-decoration: none;
-    color: black;
-    font-weight: 600;
-    font-size: 15px;
-    padding: 5px 10px; /* 호버 시 영역을 잡아주려면 padding 적용 */
-    transition: transform 0.2s ease-in-out;
-  }
-  
-  /* 호버 효과 추가 */
-  .rightSection a:hover {
-    transform: scale(1.05);
-    color: #7ACAD6;
-  }
-  
-  /* 활성 탭 효과 */
-  .rightSection a.active {
-    color: #7ACAD6;
-  }
-  
-  .main {
-    flex-grow: 1;
-    /* padding: 20px; */
-    /* background-color: #F6F7F7; */
-  }
+.container {
+  display: flex;
+  flex-direction: column;
+  height: 100vh;
+}
 
-  .modal {
-    position: absolute;
-    top: 70px; 
-    right: 100px; 
-    width: 250px;
-    max-height: 300px;
-    background: white;
-    border-radius: 15px;
-    box-shadow: 0 4px 10px rgba(0, 0, 0, 0.1);
-    padding: 0 15px 15px 15px;
-    overflow-y: auto; 
-    z-index: 1000;
-  }
-  
-  .news:hover {
-    text-decoration: none;
-  }
-  
-  .modalOverlay {
-    position: fixed;
-    top: 0;
-    left: 0;
-    width: 100%;
-    height: 100%;
-    display: flex;
-    justify-content: center;
-    align-items: center;
-    z-index: 1000;
-  }
+.header {
+  display: flex;
+  justify-content: space-between;
+  align-items: center;
+  padding: 10px 35px;
+  background-color: #f6f7f7;
+}
 
-  /* 모달 배경 흐림 효과 */
+.leftSection {
+  display: flex;
+  align-items: center;
+  gap: 32px;
+}
+
+.logo svg {
+  height: 40px;
+}
+
+.nav {
+  display: flex;
+  gap: 32px;
+}
+
+.nav a {
+  text-decoration: none;
+  color: black;
+  font-weight: 600;
+  font-size: 15px;
+  padding: 5px 10px;
+  transition: transform 0.2s ease-in-out;
+}
+
+.nav a:hover {
+  transform: scale(1.05);
+  color: #7acad6;
+}
+
+.nav a.active {
+  color: #7acad6;
+}
+
+.rightSection {
+  display: flex;
+  gap: 20px;
+}
+
+.rightSection a {
+  text-decoration: none;
+  color: black;
+  font-weight: 600;
+  font-size: 15px;
+  padding: 5px 10px; /* 호버 시 영역을 잡아주려면 padding 적용 */
+  transition: transform 0.2s ease-in-out;
+}
+
+/* 호버 효과 추가 */
+.rightSection a:hover {
+  transform: scale(1.05);
+  color: #7acad6;
+}
+
+/* 활성 탭 효과 */
+.rightSection a.active {
+  color: #7acad6;
+}
+
+.main {
+  flex-grow: 1;
+  /* padding: 20px; */
+  /* background-color: #F6F7F7; */
+}
+
+.modal {
+  position: absolute;
+  top: 70px;
+  right: 100px;
+  width: 250px;
+  max-height: 300px;
+  background: white;
+  border-radius: 15px;
+  box-shadow: 0 4px 10px rgba(0, 0, 0, 0.1);
+  padding: 0 15px 15px 15px;
+  overflow-y: auto;
+  z-index: 1000;
+}
+
+.news:hover {
+  text-decoration: none;
+}
+
+.modalOverlay {
+  position: fixed;
+  top: 0;
+  left: 0;
+  width: 100%;
+  height: 100%;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  z-index: 1000;
+}
+
+/* 모달 배경 흐림 효과 */
 .blurBackground {
   filter: blur(3px);
   pointer-events: none;
@@ -151,7 +151,7 @@
   text-align: center;
 }
 
-.googleLoginContainer{
+.googleLoginContainer {
   margin: 0 auto;
 }
 
@@ -159,95 +159,95 @@
 .closeButton {
   margin-top: 15px;
   padding: 8px 15px;
-  background-color: #7ACAD6;
+  background-color: #7acad6;
   color: white;
   border: none;
   border-radius: 5px;
   cursor: pointer;
 }
 .closeButton:hover {
-  background-color: #5AA6B5;
+  background-color: #5aa6b5;
 }
-  
-  .modalContent {
-    background: white;
-    padding: 20px;
-    border-radius: 8px;
-    width: 320px;
-    box-shadow: 0 4px 10px rgba(0, 0, 0, 0.1);
-  }
 
-  .modalTitle {
-    margin-bottom: 10px;
-    border-bottom: 1px solid #8ED1DB;
-    padding-bottom: 14px;
+.modalContent {
+  background: white;
+  padding: 20px;
+  border-radius: 8px;
+  width: 320px;
+  box-shadow: 0 4px 10px rgba(0, 0, 0, 0.1);
+}
 
-    color: #000;
-    font-family: "Gmarket Sans";
-    font-size: 18px;
-    font-style: normal;
-    font-weight: 400;
-    line-height: normal;
-  }
+.modalTitle {
+  margin-bottom: 10px;
+  border-bottom: 1px solid #8ed1db;
+  padding-bottom: 14px;
 
-  .noNotification{
-    color: #000;
-    font-family: Pretendard;
-    font-size: 17px;
-    font-style: normal;
-    font-weight: 600;
-    line-height: normal;
-  }
-  
-  .newsList {
-    list-style: none;
-    padding: 0;
-    margin: 0;
-  }
-  
-  .newsItem {
-    display: flex;
-    justify-content: space-between;
-    align-items: center;
-    padding: 8px 0;
-    border-bottom: 1px solid #ddd;
-    font-size: 14px;
-  }
+  color: #000;
+  font-family: "Gmarket Sans";
+  font-size: 18px;
+  font-style: normal;
+  font-weight: 400;
+  line-height: normal;
+}
 
-  .newsItem:hover {
-    background-color: #F6F7F7;
-  }
-  
-  .newsCategory {
-    color: #007aff;
-    font-size: 12px;
-  }
-  
-  .newsDate {
-    font-size: 12px;
-    color: gray;
-  }
-  
-  .newsItem:last-child {
-    border-bottom: none;
-  }
+.noNotification {
+  color: #000;
+  font-family: Pretendard;
+  font-size: 17px;
+  font-style: normal;
+  font-weight: 600;
+  line-height: normal;
+}
 
-  .footer {
-    background-color: #F5FBFF;
-    justify-content: space-between;
-    display: flex;
-    align-items: center;
-    padding: 0 20px;
-  }
+.newsList {
+  list-style: none;
+  padding: 0;
+  margin: 0;
+}
 
-  /* 로딩 오버레이 */
+.newsItem {
+  display: flex;
+  justify-content: space-between;
+  align-items: center;
+  padding: 8px 0;
+  border-bottom: 1px solid #ddd;
+  font-size: 14px;
+}
+
+.newsItem:hover {
+  background-color: #f6f7f7;
+}
+
+.newsCategory {
+  color: #007aff;
+  font-size: 12px;
+}
+
+.newsDate {
+  font-size: 12px;
+  color: gray;
+}
+
+.newsItem:last-child {
+  border-bottom: none;
+}
+
+.footer {
+  background-color: #f5fbff;
+  justify-content: space-between;
+  display: flex;
+  align-items: center;
+  padding: 0 20px;
+}
+
+/* 로딩 오버레이 */
 .loadingOverlay {
   position: fixed;
   top: 0;
   left: 0;
   width: 100vw;
   height: 100vh;
-  background: rgba(0,0,0,0.3); /* 반투명 어둡게 처리 */
+  background: rgba(0, 0, 0, 0.3); /* 반투명 어둡게 처리 */
   display: flex;
   justify-content: center;
   align-items: center;
@@ -285,6 +285,3 @@
   align-items: center;
   z-index: 1000;
 }
-
-
-
